Update title, fix filter checkbox alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -55,6 +55,10 @@ body {
   margin-bottom: 30px;
 }
 
+input#cats, input#dogs {
+  display: block;
+}
+
 /* Listings Table Layout */
 
 .table-hover tbody tr:hover {
